- added $UDPServerTimeRequery option which enables to work with
  less acurate timestamps in favor of performance. This enables querying
  of the time only every n-th time if imudp is running in the tight
  receive loop (aka receiving messsages at a high rate)
- doc bugfix: queue doc had wrong parameter name for setting controlling
  worker thread shutdown period
---------------------------------------------------------------------------
Version 3.21.6  [DEVEL] (rgerhards), 2008-10-22
- consolidated time calls during msg object creation, improves performance
  and consistency
- bugfix: solved a segfault condition
- bugfix: subsecond time properties generated by imfile, imklog and
  internal messages could be slightly inconsistent
- bugfix: (potentially big) memory leak on HUP if queues could not be
  drained before timeout - thanks to David Lang for pointing this out
- added capability to support multiple module search pathes. Thank
  to Marius Tomaschewski for providing the patch.
- bugfix: im3195 did no longer compile
---------------------------------------------------------------------------
Version 3.21.5  [DEVEL] (rgerhards), 2008-09-30
- performance optimization: unnecessary time() calls during message
  parsing removed - thanks to David Lang for his excellent performance
  analysis
- added new capability to property replacer: multiple immediately
  successive field delimiters are treated as a single one.
  Thanks to Zhuang Yuyao for the patch.
- added message property "inputname", which contains the name of the
  input (module) that generated it. Presence is depending on suport in
  each input module (else it is blank).
- added system property "$myhostname", which contains the name of the
  local host as it knows itself.
- imported a number of fixes and enhancements from the stable and
  devel branches, including a fix to a potential segfault on HUP
  when using UDP listners
- re-enabled gcc builtin atomic operations and added a proper
  ./configure check